--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,10 @@
 .dis-none{
   display: none;
   position: absolute;
-  top: 8%;
+  top: 10%;
 }
 .shadow{
-  box-shadow:1px 2px #a5adab;
+  box-shadow:1px 0.5px 0.5px 1px #a5adab;
 }
 /* STYLE */
 header{
@@ -26,6 +26,7 @@ header{
 }
 ul{
   justify-content: space-between;
+  align-items: baseline;
 }
 li{
   list-style: none;
@@ -49,4 +50,12 @@ li:hover{
 }
 .prodotti{
   right: 11%;
+}
+button{
+  background-color: #f95b77;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 7px;
+  outline: none;
 }
