--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,15 @@ li:hover{
 }
 button{
   background-color: #f95b77;
-  color: white;
+  color: black;
+  opacity: 0.8;
   border: none;
   border-radius: 20px;
   padding: 7px;
   outline: none;
+}
+button:hover{
+  opacity:1;
+  cursor: pointer;
+  color: white;
 }
